fix: small fixes on mobile (#1082)

--- a/assets/styles/layouts/_PricingPrograms.scss
+++ b/assets/styles/layouts/_PricingPrograms.scss
@@ -178,7 +178,7 @@
 		margin: 0.35em 0 1.5em auto;
 	}
 
-	.elementor-widget-image {
+	.elementor-widget-image:not(.Woman) {
 		display: flex;
 		margin-bottom: 1.5em;
 		width: auto;
